sales is ok - start with details of sales for customer

--- a/Back/src/views/Flavors/flavorDetail.ejs
+++ b/Back/src/views/Flavors/flavorDetail.ejs
@@ -52,7 +52,11 @@
 									
 								
 							</li>
-							
+							<li>
+								<i class="fas fa-store"></i>
+							<p> 	Fecha de actualizacion: <%= aroma.FechaRegistro %> </p>
+							</li>
+						
 
 
 						</ul>
