--- a/Back/src/views/Flavors/flavorResults.ejs
+++ b/Back/src/views/Flavors/flavorResults.ejs
@@ -21,34 +21,34 @@
              <div class="card text-white bg-dark" style="width: 18rem;">
                  <div class="card-body flavors">
                      <h5 class="card-title">
-                         <%= flavorFound[i].name %>
+                         <%= flavorFound[i].NombreAroma %>
                      </h5>
                      <h6 class="card-subtitle mb-2 text-muted">
-                         <%= flavorFound[i].brand %>
+                         <%= flavorFound[i].Proveedor %>
                      </h6>
                      
                      <p class="card-text">
                          Costo: 
-                          <%= flavorFound[i].price %> <%= flavorFound[i].costType %>
+                          <%= flavorFound[i].CostoUnitario %> <%= flavorFound[i].costType %>
 
                      </p>
                      <p class="card-text">
                          Cantidad:
-                           <%= flavorFound[i].stock %> ML
+                           <%= flavorFound[i].CantidadDisponible %> ML
 
                     </p>
                     <div class="cardsFlavorContainer">
-                     <a href="/flavors/detail/<%= flavorFound[i].idFlavor %>" class="card-link">
+                     <a href="/flavors/detail/<%= flavorFound[i].id %>" class="card-link">
                       
                              <button type="submit" class="btn btn-outline-danger btn-sm">Detalle</button>
                    
                      </a>
-                     <a href="/flavors/delete/<%= flavorFound[i].idFlavor %>" class="card-link">
-                         <form method="POST" action="/flavors/delete/<%= flavorFound[i].idFlavor %>?_method=DELETE">
+                     <a href="/flavors/delete/<%= flavorFound[i].id %>" class="card-link">
+                         <form method="POST" action="/flavors/delete/<%= flavorFound[i].ID %>?_method=DELETE">
                              <button type="submit" class="btn btn-outline-danger btn-sm">Borrar</button>
                          </form>
                      </a>
-                     <a href="/flavors/edit/<%= flavorFound[i].idFlavor %>" class="card-link">
+                     <a href="/flavors/edit/<%= flavorFound[i].id %>" class="card-link">
                          
 
                              <button type="submit" class="btn btn-outline-danger btn-sm">Editar</button>
