--- a/Back/src/views/partials/costoVenta.ejs
+++ b/Back/src/views/partials/costoVenta.ejs
@@ -7,7 +7,7 @@
             <p>Cliente: <%= ultimaVenta[0].NombreCliente %>  </p>
         </card>
             <p>Receta: <%= ultimaVenta[0].NombreReceta %>  </p>
-            <p class="card-text">Esencia:  <%= ultimaVenta.CostoTotalEsencias %>
+            <p class="card-text">Esencia:  <%= ultimaVenta[0].CostoTotalEsencia %>
             </p>
             <p>Base:  <%= ultimaVenta[0].CostoTotalBase %>
             </p>
