--- a/Back/src/views/recipe/create.ejs
+++ b/Back/src/views/recipe/create.ejs
@@ -30,7 +30,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent1">
+        <input type="number" step="0.1"name="percent1" min="0" pattern="^[0-9]+" >
         <br>
 
         <label for="">Aroma 2</label>
@@ -40,7 +40,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent2">
+        <input type="number" step="0.1" name="percent2" min="0" pattern="^[0-9]+">
         <br>
 
         <label for="">Aroma 3</label>
@@ -50,7 +50,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent3">
+        <input type="number" step="0.1" name="percent3" min="0" pattern="^[0-9]+">
         <br>
 
         <label for="">Aroma 4</label>
@@ -60,7 +60,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent4">
+        <input type="number" step="0.1" name="percent4" min="0" pattern="^[0-9]+">
         <br>
         <label for="">Aroma 5</label>
         <select class="form-control-sm" id="flavor5" name="flavor5">
@@ -69,7 +69,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent5">
+        <input type="number" step="0.1" name="percent5" min="0" pattern="^[0-9]+">
         <br>
         <label for="">Aroma 6</label>
         <select class="form-control-sm" id="flavor6" name="flavor6">
@@ -78,7 +78,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent6">
+        <input type="number" step="0.1" name="percent6" min="0" pattern="^[0-9]+">
 
         <br>
         <label for="">Aroma 7</label>
@@ -88,7 +88,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent7">
+        <input type="number" step="0.1" name="percent7" min="0" pattern="^[0-9]+">
 
         <br>
         <label for="">Aroma 8</label>
@@ -98,7 +98,7 @@
             <% } %>
         </select>
         <label for="">porcentaje</label>
-        <input type="number" name="percent8">
+        <input type="number" step="0.1" name="percent8" min="0" pattern="^[0-9]+">
 
         <br>
         
