--- a/Back/src/views/partials/registrarVenta.ejs
+++ b/Back/src/views/partials/registrarVenta.ejs
@@ -15,7 +15,7 @@
     </select>
     <br>
     <label for="ml"></label>
-    <input type="number" name="ml" placeholder="Mililitros" min="1" inputmode="numeric"pattern="^[0-9]+">
+    <input type="number" name="ml" placeholder="Mililitros" min="10" step="10" inputmode="numeric"pattern="^[0-9]+">
     <br>
     <label for="nico"></label>
     <input type="number" name="nico" placeholder="Nico" min="0" pattern="^[0-9]+" >
@@ -40,14 +40,6 @@
           <label for="consulta">Consulta</label>
         </div>
       </fieldset>
-
-    <!-- <label
-  ><input type="checkbox" id="cbox1" value="first_checkbox" /> Este es mi primer
-  checkbox</label
-><br />
-
-<input type="checkbox" id="cbox2" value="second_checkbox" />
-<label for="cbox2">Este es mi segundo checkbox</label> -->
     <!-- TERMINA LA VALIDACION SI ES VENTA O CONSULTA -->
     <button class="btn btn-primary btnSend">Registrar</button>
 </form>
