--- a/Back/src/views/recipe/create.ejs
+++ b/Back/src/views/recipe/create.ejs
@@ -26,7 +26,7 @@
         <label for="">Aroma 1</label>
         <select class="form-control-sm" id="flavor1" name="flavor1">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id %>" placeholder=""><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID %>" placeholder=""><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -36,7 +36,7 @@
         <label for="">Aroma 2</label>
         <select class="form-control-sm" id="flavor2" name="flavor2">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -46,7 +46,7 @@
         <label for="">Aroma 3</label>
         <select class="form-control-sm" id="flavor3" name="flavor3">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -56,7 +56,7 @@
         <label for="">Aroma 4</label>
         <select class="form-control-sm" id="flavor4" name="flavor4">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -65,7 +65,7 @@
         <label for="">Aroma 5</label>
         <select class="form-control-sm" id="flavor5" name="flavor5">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -74,7 +74,7 @@
         <label for="">Aroma 6</label>
         <select class="form-control-sm" id="flavor6" name="flavor6">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -84,7 +84,7 @@
         <label for="">Aroma 7</label>
         <select class="form-control-sm" id="flavor7" name="flavor7">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -94,7 +94,7 @@
         <label for="">Aroma 8</label>
         <select class="form-control-sm" id="flavor8" name="flavor8">
             <% for( let i = 0; i < aroma.length; i++ ) { %>
-                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
+                <option value="<%= aroma[i].ID  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
