--- a/Back/src/views/Flavors/flavorDetail.ejs
+++ b/Back/src/views/Flavors/flavorDetail.ejs
@@ -63,11 +63,11 @@
 
 						<hr>
 
-						<a href="/flavors/edit/<%= aroma.id %>" class="card-link">
+						<a href="/flavors/edit/<%= aroma.ID %>" class="card-link">
 							<button type="submit" class="btn btn-outline-danger btn-sm">Editar</button>
 						</a>
 						<form method="POST"
-                                    action="/flavors/delete/<%= aroma.id %>?_method=DELETE">
+                                    action="/flavors/delete/<%= aroma.ID %>?_method=DELETE">
                                     <button type="submit" class="btn btn-outline-danger btn-sm">
                                         Eliminar
                                     </button>
