--- a/Back/src/views/partials/header.ejs
+++ b/Back/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
               <a class="nav-link" href="/sales">Ventas</a>
               <a class="nav-link" href="/stock">Stock</a>
               <a class="nav-link" href="/costs" tabindex="-1" aria-disabled="true">Costos</a>
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Ajustar Stock</a>
+              <a class="nav-link" href="/precios" tabindex="-1" aria-disabled="true">Precios Venta</a>
             </div>
             <button class="btn btn-outline-warning btn-sm login"><a class="nav-link login" href="/users" tabindex="-1" aria-disabled="true">Login</a></button>
             
