--- a/Back/public/stylesheets/style.css
+++ b/Back/public/stylesheets/style.css
@@ -90,10 +90,13 @@ input{
   margin-top: 20vh;
 }
 .two{
-  width: 85vw;
-  height: 87vh;
+  width: 100%;
+  height: 100%;
   background-color: rgb(8, 138, 251);
+  text-align: center;
+  
 }
+
 
 /* End Sales */
 @media (max-width: 992px){ 
