--- a/Back/src/views/partials/registrarVenta.ejs
+++ b/Back/src/views/partials/registrarVenta.ejs
@@ -18,7 +18,7 @@
     <input type="number" name="ml" placeholder="Mililitros" min="10" step="10" inputmode="numeric"pattern="^[0-9]+">
     <br>
     <label for="nico"></label>
-    <input type="number" name="nico" placeholder="Nico" min="0" pattern="^[0-9]+" >
+    <input type="number" name="nico" placeholder="Nico" min="0" step="0.1"pattern="^[0-9]+" >
     <br>
     <label for="quantity"></label>
     <input type="number" name="cant" placeholder="Unidades" min="1" pattern="^[0-9]+">
